--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1> Kathy </h1>
     <h2> New York, NY</h3>
+   
     <h4><a href="http://www.generalassemb.ly">General Assembly</a></h4>
-<ul>
-  <img src="" alt="">
+    <img src="https://www.thespruce.com/thmb/4THbAlZULHE_dRRt8fvCODktfJA=/450x0/filters:no_upscale():max_bytes(150000):strip_icc()/Babychick-GettyImages-171143554-5911e8d63df78c92838d4b8c.jpg" alt="baby chick">
+<ol>
     <li>London</li>
     <li>Chicago</li>
     <li>Sydney</li>
